=== Desk Mess Mirrored ===
== Version 2.0.1 ==
Changelog: February 14, 2012
= Code =
* Fixed display issue when widget title was empty - see `dmm_widget_title`

= CSS =
* Added z-index to "cup" to keep it on top of "sticky notes"
* Adjusted `#logo h2` element text position higher for better cross-browser compatibility

= Miscellaneous =
* Updated 'readme.txt' with a "Licensing" section

= Internet Browsers Reviewed =
* Apple Safari v5.1.2
* Firefox v10.0.1
* Google Chrome v17.0
* Internet Explorer v9.0
* Opera v11.61

/** ------------------------------------------------------------------------- */

== Version 2.0 ==
Changelog: January 9, 2012
= Code =
* Added additional PHPDoc style documentation
* Added `DMM WP Title` - utilizes the `wp_title` filter to add text to the default title output
* Added `DMM Use Posted` function for posts without titles
* Added minimal doc-block to each template file as relevant
* Added 'desk-mess-mirrored' loop template
* Added 'dmm-navigation' and implemented in 404, index, archive, and author template files
* Added post-formats: aside, quote, and status
* Added clearing `div` at top of 'author' and 'page' templates
* Added project TODO section to 'index.php'
* Added `DMM Add Body Classes` - Adds additional classes to the core `body_class` function
* Changed `BNS Theme Version` to `DMM Theme Version` with extensive re-writes to text displayed
* Changed `my_theme_data` to `active_theme_data` in `DMM Theme Version`
* Changed post navigation test to 'Older posts' and 'Newer posts' replacing 'Previous entries' and 'Next entries' respectively
* Implemented 'desk-mess-mirrored' loop in 404, archive, author, index (home, front-page), page, single templates
* Re-defined each widget area separately to allow for descriptions to show end-user more details about each area
* Removed 'Home" link code from `dmm_list_pages`
* Removed unused images (from IE6 support)
* Renamed `BNS Dynamic Copyright` to `DMM Dynamic Copyright` (refactored changelog)