@@ -17,7 +17,7 @@
  * @internal    REQUIRES WordPress version 3.1.0
  * @internal    Tested up to WordPress version 3.3.1
  *
- * @version     2.0.1-alpha
+ * @version     2.0.1
  * @author      Edward Caissie <edward.caissie@gmail.com>
  * @copyright   Copyright (c) 2009-2012, Edward Caissie
  *
@@ -44,17 +44,14 @@
  * @internal Project To-do List - see readme.txt for pre-2.0 PTL
  * @todo Review / Update 404.php page
  * @todo Review adding 'category.php' template back into theme files (also consider 'tag.php', 'date.php', etc.)
- * @todo Review `the_shortlink` in post meta being displayed
  * @todo Review post meta comment text - sort out how to show amount of comments if they exist when comments are closed
  * @todo Review verbiage used for the 'Page Link' on pages (see `the_shortlink`)
- * @todo Add Post-Format: Link
+ * @todo Add Post-Format: Link - use infinity symbol (2.1-early)
  * @todo Add 'search.php' template? (see http://wordpress.org/support/topic/theme-desk-mess-mirrored-searchphp-for-theme-version-191)
  * @todo Add specific CSS to the placeholders used by the new (comment) author classes
- * @todo Add documentation explaining the relevance and possibly usage of the 'Page Link' shortlink found on pages.
  *
- * Last revised January 31, 2012
- * Added more to-do items regarding the 'Page Link' shortlink implementation
- * Fixed display issue when widget title was empty - see `dmm_widget_title`
+ * Last revised February 15, 2012
+ * Updated to-do list
  */
 ?>
 
